# klik

./: README.md
branches/cristian/fusioniso/fusioniso/: INSTALL  Makefile.am  README  configure.ac  fusioniso.spec
branches/cristian/fusioniso/fusioniso/linux/: Makefile.am  iso_fs.h  rock.h
branches/cristian/fusioniso/fusioniso/man/: Makefile.am
branches/cristian/fusioniso/fusioniso/src/: Makefile.am  README  fusioniso.c  fusioniso.h  fusioniso_debug.c  fusioniso_debug.h  fusioniso_fs.c  fusioniso_fs.h  fusioniso_isofs.c  fusioniso_isofs.h
branches/cristian/minirun/: minirun.c  mk-minirun.sh
branches/m3/: README.m3
branches/m3/client/binaryparts/share/services/: isofsthumbnail.desktop  kfile_cmg.desktop
branches/m3/client/trunk/: Makefile  README  README.kde-thumbnailer  install.py  klik-svn2tar  uninstall.py
branches/m3/client/trunk/CIsofsUtl/: Makefile  lib_CIsoUtl.cpp  lib_CIsoUtl.hh  lib_CLinkUtl.cpp  lib_CLinkUtl.hh  main.cpp
branches/m3/client/trunk/cmg_kfile/: Makefile.in  configure.in  configure.in.in
branches/m3/client/trunk/cmg_kfile/doc/: Makefile.in
branches/m3/client/trunk/cmg_kfile/po/: kfile_cmg.es.po  kfile_cmg.fr.po
branches/m3/client/trunk/cmg_kfile/src/: Makefile.am  Makefile.in  kfile_cmg.cpp  kfile_cmg.h
branches/m3/client/trunk/cmg_kfile/templates/: cpp
branches/m3/client/trunk/cmg_kthumbnail/: AUTHORS  Makefile.am  Makefile.in  config.h.in  configure.in  configure.in.in  isofsthumbnail.spec
branches/m3/client/trunk/cmg_kthumbnail/doc/: Makefile.in
branches/m3/client/trunk/cmg_kthumbnail/src/: Makefile.am  Makefile.in  isofscreator.cpp  isofscreator.h  isofsthumbnail.cpp
branches/m3/client/trunk/debian/: control  copyright  install  klik.mime  klik.sharedmimeinfo  patch.etch  postinst  prerm  rules
branches/m3/client/trunk/fakechroot/scripts/: fakechroot.in
branches/m3/client/trunk/fakechroot/src/: libfakechroot.c
branches/m3/client/trunk/install/: cmg-mimetype.xml  klik.completion  klik.desktop  recipe-mimetype.xml
branches/m3/client/trunk/install/gnome/: cmg-gnome-thumbnail.schema  klik-protocol.schema
branches/m3/client/trunk/install/kde/: klik.protocol
branches/m3/client/trunk/klikclient/po/: Makefile  de.po  es.po  fr.po
branches/m3/client/trunk/klikd/trunk/: Makefile.am  Makefile.in  README  TODO  autogen.sh  config.h.in  configure  configure.ac
branches/m3/test recipes/: Snowballz.xml  error.xml  firefox3beta1.xml  openoffice.org2.3.xml  xvier test.xml
branches/m3/utils/ar/: archive.c  misc.c  strmode.c
branches/m3/virtualization/unionfuse/trunk/: HOW_TO_COMPILE
branches/m3/virtualization/unionfuse/trunk/cramfs/: cramfsck  cramfsck.c  klik-cramfs-stdout.diff
branches/m3/virtualization/unionfuse/trunk/klikfuse/: AUTHORS  ChangeLog  Makefile.am  (+6 more)
trunk/client/binaryparts/lib/kde3/: isofsthumbnail.la  kfile_cmg.la
trunk/client/binaryparts/share/services/: isofsthumbnail.desktop
trunk/client/trunk/: Makefile  install.py  install_kde.sh  uninstall.py
trunk/client/trunk/cmg_kfile/: AUTHORS  Doxyfile  Makefile.in  README.devel  configure
trunk/client/trunk/cmg_kfile/doc/: Makefile.am  Makefile.in
trunk/client/trunk/cmg_kfile/po/: Makefile.in  README
trunk/client/trunk/cmg_kfile/src/: Makefile.am  Makefile.in  kfile_cmg.cpp  kfile_cmg.desktop  kfile_cmg.h  kfile_cmg.moc
trunk/client/trunk/cmg_kthumbnail/: .in  ChangeLog  README  TODO  acinclude.m4  configure  subdirs
trunk/client/trunk/cmg_kthumbnail/doc/: Makefile.am
trunk/client/trunk/cmg_kthumbnail/src/: Makefile.am  Makefile.in  README  isofscreator.cpp  isofscreator.h  isofsthumbnail.desktop
trunk/client/trunk/debian/: changelog  control  copyright  dirs  install  klik.mime  postinst  prerm  rules
trunk/client/trunk/install/: cmg-mimetype.xml  klik.desktop  recipe-mimetype.xml
trunk/client/trunk/install/gnome/: cmg-gnome-thumbnail.schema
trunk/client/trunk/install/kde/: klik.desktop
trunk/client/trunk/kfakechroot/: Makefile.am  configure.ac
trunk/client/trunk/kfakechroot/man/: Makefile.am  kchroot.1  kfakechroot.7  kfakechroot.pod
trunk/client/trunk/kfakechroot/src/: Makefile.am  kchroot.c  libfakechroot.c  libfakechroot.h
trunk/client/trunk/klikclient/po/: Makefile  de.errors  de.po  es.errors  es.po  fr.errors  fr.po  gl.errors  gl.po  klikclient.pot  statistics.txt
trunk/client/trunk/klikd/: AUTHORS  autogen.sh  configure.ac
trunk/client/trunk/klikd/src/: KlikdConfig.cpp  KlikdConfig.h  Makefile.am  inotify-cxx.h  klikd.cpp  klikd.h
trunk/client/trunk/libCmgUtl/: Makefile.am  autogen.sh  configure.in
trunk/client/trunk/libCmgUtl/man/: Makefile.am  cmginfo.1  cmginfo.pod
trunk/client/trunk/libCmgUtl/src/: Makefile.am  cmg_utl.cpp  cmg_utl.hh  iso_utl.h  link_utl.cpp  link_utl.hh  main.cpp
trunk/generator/: generator-13libfakechroot
trunk/test recipes/: firefox3beta2.xml  ifolder.xml  teewars.recipe
trunk/utils/ar/: Makefile  ar.c  ar.h  contents.c  strmode.h
trunk/virtualization/CLONE NEWNS/: Makefile  README  klik-overlay  klik_suid.c
trunk/virtualization/CLONE NEWNS/debian/: changelog  control  copyright  rules
trunk/virtualization/CLONE NEWNS/examples/: .klik  .zAppRun
trunk/virtualization/CLONE NEWNS/fuse/: funionfs_klik
trunk/virtualization/CLONE NEWNS/patches/: README  fuse-client.diff
trunk/virtualization/unionfuse/trunk/fusioniso/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  configure  configure.in
trunk/virtualization/unionfuse/trunk/fusioniso/src/: Makefile.am  Makefile.in  Makefile.klik2  README  fusioniso-fs.c  fusioniso-fs.h  fusioniso-isofs.c  fusioniso-isofs.h  fusioniso.c
trunk/virtualization/unionfuse/trunk/glibc/: README
trunk/ympclient/: client  gqviewe.ymp  klik.ymp  osc.ymp  ympclient.glade
wiki/: ChecklistForPackagers.wiki  CmgFormatOverview.wiki  DesignQuestions.wiki  DevMeetingBetaRelease.wiki  Fakechroot.wiki  GSoC_2008.wiki  GSoC_Students.wiki  HowToTestGUI.wiki  Klik2RecipeFiles.wiki  MileStone3.wiki  MileStone4.wiki  MileStone5.wiki  MileStone6.wiki  Packages.wiki  SVN.wiki  Screenshots.wiki  TODO.wiki  UpdatedRoadmap.wiki  deb.wiki  umview.wiki
(+119 files in other folders)
